Small styling changes, fix user avatar flicker on disconnect, add "Open" option to chat context menu

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -14,10 +14,6 @@ html * {
     font-family: Rubik, sans-serif;
 }
 
-/* div { */
-/*     border: 1px solid red !important; */
-/* } */
-
 #settings_menu_modal {
     height: 100%;
     width: 100%;
@@ -872,6 +868,7 @@ html * {
     row-gap: 8px;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 #room_entry_proxy {
@@ -884,6 +881,18 @@ html * {
 
 #room_entry_proxy_enabled {
     width: 180px;
+}
+
+#room_vertical_spacer {
+    height: 100%;
+}
+
+#room_simple_separator {
+    min-height: 1px;
+    width: calc(100% - 8px);
+    border-radius: 4px;
+    margin: 4px 4px;
+    background-color: var(--bg_5);
 }
 
 #room_media_section {
@@ -1038,9 +1047,9 @@ html * {
 }
 
 #room_media_browse_separator {
-    height: 1px;
+    height: 0px;
     width: 100%;
-    background-color: var(--bg_5);
+    border: 1px dashed var(--fg_4);
 }
 
 #room_media_browse_buttons {
@@ -1048,7 +1057,6 @@ html * {
     flex-grow: 1.0;
     display: grid;
     box-sizing: border-box;
-    /* padding: 0 22px; */
     row-gap: 8px;
     column-gap: 8px;
 }
@@ -1172,6 +1180,7 @@ html * {
 #room_subtitle_select_root {
     width: 100%;
     height: 36px;
+    min-height: 36px;
     display: flex;
     box-sizing: border-box;
     column-gap: 4px;
@@ -1714,6 +1723,8 @@ html * {
     margin-right: 4px;
     margin-left: 4px;
     color: var(--fg_6);
+    border-color: var(--fg_6);
+    border-radius: 2px;
 }
 
 .context_menu_item.hide {
